# rend3-issue570

./: CHANGELOG.md  Cargo.toml  NOTES.md
examples/: Cargo.toml
examples/src/: tests.rs
examples/src/animation/: mod.rs
examples/src/cube/: mod.rs
examples/src/cube_no_framework/: mod.rs
examples/src/egui/: mod.rs
examples/src/scene_viewer/: mod.rs
examples/src/skinning/: mod.rs
examples/src/static_gltf/: mod.rs
examples/src/textured_quad/: mod.rs
rend3/: Cargo.toml
rend3-anim/: Cargo.toml
rend3-egui/: Cargo.toml
rend3-egui/src/: lib.rs
rend3-framework/: Cargo.toml
rend3-framework/src/: lib.rs
rend3-gltf/: Cargo.toml
rend3-gltf/src/: lib.rs
rend3-routine/: Cargo.toml
rend3-routine/src/: forward.rs  skinning.rs  skybox.rs  tonemapping.rs
rend3-routine/src/pbr/: material.rs
rend3-test/: Cargo.toml
rend3-test/src/: runner.rs
rend3-types/: Cargo.toml
rend3-types/src/: lib.rs
rend3/src/: instruction.rs  setup.rs
rend3/src/graph/: encpass.rs  graph.rs  node.rs
rend3/src/managers/: directional.rs  handle_alloc.rs  material.rs  mesh.rs  object.rs  point.rs  skeleton.rs  texture.rs
rend3/src/managers/directional/: shadow_alloc.rs
rend3/src/managers/material/: texture_dedupe.rs
rend3/src/renderer/: error.rs  eval.rs  mod.rs
rend3/src/util/: mipmap.rs  scatter_copy.rs
rend3/src/util/freelist/: vec.rs
