[workspace]
resolver = "2"
members = [
    "examples/",
    "rend3",
    "rend3-anim",
    "rend3-egui",
    "rend3-framework",
    "rend3-gltf",
    "rend3-routine",
    "rend3-test",
    "rend3-types",
]

[profile.ci]
inherits = "dev"
debug = false
incremental = false

[profile.ci.package."*"]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true
lto = "thin"

#   Temporary override of range-alloc, where a fix was not pushed to crates.io.
[patch.crates-io]
range-alloc = {version = "0.1.3", git = 'https://github.com/gfx-rs/range-alloc.git' }
