[workspace]
resolver = "2"
members = [
    "examples/",
    "rend3",
    "rend3-anim",
    "rend3-egui",
    "rend3-framework",
    "rend3-gltf",
    "rend3-routine",
    "rend3-test",
    "rend3-types",
]

[workspace.package]
version = "0.24.1"

[profile.ci]
inherits = "dev"
debug = false
incremental = false

[profile.ci.package."*"]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true
lto = "thin"
