[workspace]
resolver = "2"
members = [
    "examples/",
    "rend3",
    "rend3-anim",
    "rend3-egui",
    "rend3-framework",
    "rend3-gltf",
    "rend3-routine",
    "rend3-test",
    "rend3-types",
]

[workspace.package]
version = "0.24.2"

[workspace.dependencies]
wgpu = "^24.0.1"
wgpu-types = "^24.0.0"
wgpu-profiler = "^0.21.0"

[profile.ci]
inherits = "dev"
debug = false
incremental = false

[profile.ci.package."*"]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true
lto = "thin"
