[package]
name = "rend3-examples-package"
license = "MIT OR Apache-2.0 OR Zlib"
version.workspace = true
authors = ["The rend3 Developers"]
edition = "2021"
publish = false
rust-version = "1.71"

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "rend3-examples"
path = "src/main.rs"

[features]
# Enable Tracy tracing for scene-viewer
tracy = ["tracy-client"]

[dependencies]
# error handling
anyhow = "1"
# The egui immediate mode gui library
egui = "0.30"
# Winit integration with egui (turn off the clipboard feature)
egui-winit = { version = "0.30", default-features = false, features = ["links", "wayland"] }
# logging
env_logger = { version = "0.11", default-features = false, features = ["auto-color", "humantime"] }
# Linear algebra library
glam = "0.28"
# gltf model loading
gltf = "1.4"
# Channel
flume = "0.11"
# Logging infrastructure
log = "0.4"
# Inline string
indoc = "2"
# Importing images
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "tiff",
] }
# profiling
profiling = "1"
# argument parsing
pico-args = "0.5"
# block on async functions
pollster = "0.3"
# Renderer core
rend3 = { path = "../rend3" }
# Play animations on imported gltf models
rend3-anim = { path = "../rend3-anim" }
# Egui integration with rend3
rend3-egui = { path = "../rend3-egui" }
# Programmable render list that dictates how the scene renders
rend3-routine = { path = "../rend3-routine" }
# Framework that deals with the event loop, setting up the renderer, and platform differences.
rend3-framework = { path = "../rend3-framework" }
# Import gltf models
rend3-gltf = { path = "../rend3-gltf" }
# Opening URL's
webbrowser = "1"
# Instant but portable to the web
web-time = "1.1"
# windowing
winit = "0.30"
# Integration with wgpu
wgpu = "23.0"
# Profiling with wgpu
wgpu-profiler = "0.19"
tracy-client = { version = "0.17", optional=true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "1"
console_error_panic_hook = "0.1"
js-sys = "0.3"
gloo-console = "0.3"
web-sys = "0.3.67"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = { version = "0.7", features = ["logger"] }

[dev-dependencies]
rend3-test = { path = "../rend3-test" }
tokio = "1"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { version = "0.3" }

[package.metadata.android]
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
min_sdk_version = 28
target_sdk_version = 28
compile_sdk_version = 28
