[package]
name = "rend3-egui"
version = "0.22.1"
authors = ["The rend3 Developers"]
edition = "2021"
description = "Egui Render Routine for the rend3 rendering library."
readme = "../README.md"
license = "MIT OR Apache-2.0 OR Zlib"
repository = "https://github.com/BVE-Reborn/rend3"
keywords = ["3d", "graphics", "rend3", "renderer", "egui"]
categories = ["game-development", "graphics", "rendering", "rendering::engine", "wasm"]
rust-version = "1.71"

[dependencies]
egui = "0.28"
egui-wgpu = "0.28"
glam = "0.28"
rend3 = { version = "^0.22.1", path = "../rend3" }
wgpu = "22.1"
wgpu-types = "22.0"
